--- a/app/design/frontend/default/rooja/template/onestepcheckout/shipping_method.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/shipping_method.phtml
@@ -78,7 +78,7 @@
                            <?php if ($_rate->getErrorMessage()): ?>
                             <ul class="messages"><li class="error-msg"><ul><li><?php echo $_rate->getErrorMessage() ?></li></ul></li></ul>
                            <?php else: ?>
-                            <div style="display:none;">
+                            <!-- <div style="display:none;"> -->
                                 <input name="shipping_method" type="radio" class="validate-one-required-by-name" value="<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>"<?php if($_rate->getCode()===$this->getAddressShippingMethod()) echo ' checked="checked"' ?> />
                                 <label for="s_method_<?php echo $_rate->getCode() ?>"><!--<b><?php echo $this->getCarrierName($code) ?>:</b>--> <?php echo $_rate->getMethodTitle() ?>
                                 <strong>
@@ -91,7 +91,7 @@
                                 <?php endif; ?>
                                 </strong>
                                 </label>
-                                </div>
+                               <!-- </div> -->
                                 
                                 
                                 <label for="shipping_<?php echo $_rate->getCode() ?>"><!--<b><?php echo $this->getCarrierName($code) ?>:</b>--> <?php echo $_rate->getMethodTitle() ?>
