Ankit and BG file

--- a/app/design/frontend/default/rooja/template/page/1column-static.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column-static.phtml
@@ -66,5 +66,23 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         <?php echo $this->getChildHtml('before_body_end') ?>
 <!--</div>-->
 <?php echo $this->getAbsoluteFooter() ?>
+
+<!-- Google Code for Remarketing tag -->
+<!-- Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. For instructions on adding this tag and more information on the above requirements, read the setup guide: google.com/ads/remarketingsetup -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 997818953;
+var google_conversion_label = "0R3TCJeG0gQQyYTm2wM";
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/997818953/?value=0&amp;label=0R3TCJeG0gQQyYTm2wM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 </body>
 </html>
