COD - Yellow bg message

--- a/app/design/frontend/default/rooja/template/onestepcheckout/billing_fields.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/billing_fields.phtml
@@ -191,6 +191,8 @@ function updatePaymentMethods()
 		{
 			
 			statename = responseData[2];
+			if(statename != '') {
+			
 			/*
 			statename = statename.toLowerCase();
 			statename = statename.replace(/\s/g, '');
@@ -209,7 +211,7 @@ function updatePaymentMethods()
 				*/
 			statename = statename.toLowerCase();
 			statename = statename.replace(/\s/g, '');
-						
+			stateid = ''	
 			var x=document.getElementById("billing:region_id");
 						
 			for (i=0;i<x.length;i++)
