--- a/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
@@ -57,10 +57,14 @@ $helper = Mage::helper('onestepcheckout/checkout');
 		$(".payment-methods input").live('change', function() {
 			
 			if($('#p_method_cashondelivery').is(':checked')) { 
+				$("#container_payment_method_cashondelivery").css("display", "block");
+				
 				$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-8080622277 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders. <br><br>The maximum limit for a COD order is Rs 20,000 outside of New Delhi and Gurgaon.');
 				$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
 			}
 			if($('#p_method_Avenues_standard').is(':checked')) { 
+				$("#container_payment_method_cashondelivery").css("display", "none");
+				
 				$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
 				$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/veri-2.png'); ?>" alt="Security" id="secureLogos">');
 			}
@@ -1265,7 +1269,7 @@ function UpdateShipMethod() {
 		
 	} 
 	if(j('#p_method_cashondelivery').is(':checked')) {
-		j('#container_payment_method_cashondelivery fieldset').show();
+		
 		if(subtotal > 2000) {
 			j('#s_method_shippingrates_Freeshipping').attr("checked","checked");
 			j('#s_method_shippingrates_Flatrate').removeAttr('checked');
@@ -1280,6 +1284,9 @@ function UpdateShipMethod() {
 			j('label[for="shipping_shippingrates_Flatrate"]').show();
 	
 		}
+		j('#container_payment_method_cashondelivery').show();
+		j('#container_payment_method_cashondelivery fieldset').show();
+		j('#payment_form_cashondelivery').show();
    } 
 }
 
@@ -1351,8 +1358,7 @@ Event.observe(window, 'load', function() {
 
         $$('dl.shipment-methods input').invoke('observe', 'click', get_separate_save_methods_function(url, update_payments));
 		$$('div.payment-methods input[name="payment\[method\]"]').invoke('observe', 'click', function() {
-            //alert("Updating Ship method")
-			UpdateShipMethod();
+            UpdateShipMethod();
         });
 		
         $$('div.payment-methods input[name="payment\[method\]"]').invoke('observe', 'click', get_separate_save_methods_function(url));
