--- a/app/design/frontend/default/rooja/template/onestepcheckout/payment_method.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/payment_method.phtml
@@ -118,7 +118,7 @@ $subtotal = $totals["subtotal"]->getValue();
  ?>
 <script type="text/javascript">
 	var j = jQuery.noConflict(); 
-	//var subtotal=<?php echo $subtotal; ?>
+	var subtotal=<?php echo $subtotal; ?>
 	
 		//alert(subtotal);
 
@@ -271,6 +271,7 @@ $$('#checkout-payment-method-load dt input').invoke('observe', 'click', function
 
         if(element !== null && container !== null)    {
             container.show();
+			$('#container_payment_method_cashondelivery fieldset').show();
             $(name).show();
         }
     }
