--- a/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
@@ -1256,7 +1256,7 @@ function UpdateShipMethod() {
 	j('label[for="shipping_shippingrates_Freeshipping"]').hide();
 	j('label[for="s_method_shippingrates_Flatrate"]').hide();
 	j('label[for="shipping_shippingrates_Flatrate"]').hide();
-	j('#container_payment_method_cashondelivery fieldset').hide();
+	j('#container_payment_method_cashondelivery').hide();
 
 
 	if(j('#p_method_Avenues_standard').is(':checked')) {
