--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -137,8 +137,10 @@ jQuery(document).ready(function(){
 if (window.location.hash == '#_=_')
 //window.location.hash = '';
 	window.location.hash = ''; // for older browsers, leaves a # behind
-    history.pushState('', document.title, window.location.pathname); // nice and clean
-    e.preventDefault(); // no page reload
+    if (typeof  history.pushState == 'function') {
+	    history.pushState('', document.title, window.location.pathname); // nice and clean
+	     e.preventDefault(); // no page reload
+	}
 </script>
 
 <?php date_default_timezone_set('Asia/Calcutta'); ?>
