--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -462,8 +462,8 @@ function formatCurrency(num) {
 					return (((sign)?'':'-') + 'Rs. ' + num + '.' + cents);
 				}*/
 	//jQuery.noConflict();
-	 /*var fbOffset = <?php echo number_format($fbinc, 2); ?>;
-	 var fbPriceJS = <?php echo number_format($fbprice, 2); ?>;*/
+	 /*var fbOffset = <?php //echo number_format($fbinc, 2); ?>;
+	 var fbPriceJS = <?php //echo number_format($fbprice, 2); ?>;*/
 	<?php if (!$fbprice == null) { ?>
 		var fbPriceJS = <?php echo $fbprice; ?>;
 	<?php }else { ?>
