--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -79,7 +79,7 @@ P.S. Hurry!"/>
 </script>
 
 </head>
-<body class="">
+<body class="login">
 <?php echo $this->getChildHtml('after_body_start') ?>
 	<?php echo $this->getChildHtml('global_notices') ?>
 	<?php echo $this->getChildHtml('global_messages') ?>
@@ -89,9 +89,7 @@ P.S. Hurry!"/>
 		<ul>
 			<li><a href="http://rooja.com">Home</a></li>
 			<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
-			<li><a href="https://roojacareers.resumetracker.com/public" target="_blank">Careers</a></li>
 			<li><a href="#contactWrapper" class="fancyboxLink">Contact</a></li>
-			<li><a href="http://blog.rooja.com" target="_blank">Blog</a></li>
 		</ul>
 
 		<div id="socialLinks" class="fr">
