--- a/app/design/frontend/default/rooja/layout/page.xml
+++ b/app/design/frontend/default/rooja/layout/page.xml
@@ -46,13 +46,16 @@ Default layout, loads most of the pages
                 <action method="addJs"><script>mage/translate.js</script></action>
                 <action method="addJs"><script>mage/cookies.js</script></action>
                 <action method="addJs"><script>jquery/jquerynoConflict.min.js</script></action>
-								<action method="addJs"><script>jquery/resetjQuery.js</script></action>
-								<action method="addJs"><script>jquery/jquery.innerfade.js</script></action>
-								<!-- <action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>-->
+				<action method="addJs"><script>jquery/Placeholders.min.js</script></action>
+				<action method="addJs"><script>jquery/resetjQuery.js</script></action>
+				<action method="addJs"><script>jquery/jquery.innerfade.js</script></action>
+				<action method="addJs"><script>jquery/jquery.fancybox.js</script></action>
+				<!-- <action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>-->
 								
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
                 <action method="addCss"><stylesheet>css/reset.css</stylesheet></action>
+				<action method="addCss"><stylesheet>css/jquery.fancybox-1.3.4.css</stylesheet></action>
                 <action method="addCss"><stylesheet>css/login.css</stylesheet></action>
 								<!-- <action method="addCss"><stylesheet>css/jquery.fancybox-1.3.4.css</stylesheet></action> -->
                 <action method="addItem"><type>skin_css</type><name>css/styles-ie.css</name><params/><if>lt IE 8</if></action>
