--- a/app/design/frontend/default/rooja/template/page/1column-homestatic.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column-homestatic.phtml
@@ -89,7 +89,7 @@ P.S. Hurry!"/>
 	
 	} ?>
 </head>
-<body class="">
+<body class="login">
 <div class="loginwrapper">
 <?php echo $this->getChildHtml('after_body_start') ?>
 	<?php echo $this->getChildHtml('global_notices') ?>
@@ -249,9 +249,7 @@ P.S. Hurry!"/>
 		<ul>
 			<li><a href="http://rooja.com">Home</a></li>
 			<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
-			<li><a href="https://roojacareers.resumetracker.com/public" target="_blank">Careers</a></li>
 			<li><a href="#contactWrapper" class="fancyboxLink">Contact</a></li>
-			<li><a href="http://blog.rooja.com" target="_blank">Blog</a></li>
 		</ul>
 
 		<div id="socialLinks" class="fr">
