--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -59,11 +59,9 @@
 		</ul>
 		</section>
 		<section class="col1 fl noMargin">
-			<ul id="twitter_update_list">
-			<li><p>Loading Tweets..</p></li>
-			</ul>
-			<script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-			<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/roojafashion.json?callback=twitterCallback2&count=1"></script>
+		    <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
+			<ul id="twitter_update_list"><p>Loading Tweets..</p></ul>
+            <script type="text/javascript" src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=roojafashion&include_rts=true&count=1&callback=twitterCallback2"></script>
 			<ul id="socialLinks">
 				<li><a href="http://twitter.com/roojafashion" title="Follow us on Twitter" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-brown.png') ?>" alt="Twitter icon">Follow us on Twitter</a></li>
 				<li><a href="http://www.facebook.com/roojafashion" title="Like us on Facebook" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-brown.png') ?>" alt="Facebook icon">Join us on Facebook</a></li>
