by Vitaliy Krasovskiy ( error during migration )
Signed-off-by: Ankit Sharma <ankit_sam2001@yahoo.com>

--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -84,7 +84,7 @@
 
     if ($_imgUrl = $_category->getImageUrl()) {
 
-        $_imgHtml = '<p class="category-image"><img src="'.$_imgUrl.'" alt="'.$this->htmlEscape($_category->getName()).'" title="'.$this->htmlEscape($_category->getName()).'" /></p>';
+        $_imgHtml = '<p class="category-image"><img src="'.$_imgUrl.'" alt="'.$_category->getName().'" title="'.$_category->getName().'" /></p>';
 
         $_imgHtml = $_helper->categoryAttribute($_category, $_imgHtml, 'image');
 
