edit quantity bug removed

--- a/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
@@ -24,6 +24,15 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
+<script>
+function checkForInt(evt) 
+{
+var charCode = ( evt.which ) ? evt.which : event.keyCode;
+return ( charCode >= 48 && charCode <= 57 );
+}
+</script>
+
 <?php $_helper = $this->helper('catalog/output'); ?>
 <?php $_product = $this->getProduct(); ?>
 <?php //var_export($_product); ?>
@@ -31,7 +40,7 @@
 <?php if($_product->isSaleable()) { ?>
         <?php if(!$_product->isGrouped()): ?>
 	<br class="clear">
-        <input type="text" name="qty" id="qty" maxlength="2" value="1" disabled="disabled" title="<?php echo $this->__('Qty') ?>" class="input-text qty" />
+        <input type="text" name="qty" id="qty" maxlength="2" value="1" title="<?php echo $this->__('Qty') ?>" class="input-text qty" onkeypress="return checkForInt(event)"/>
         <label for="qty"><?php echo $this->__('Quantity') ?></label>
 		<?php endif; ?>
 				<script type="text/javascript">
