--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -109,14 +109,15 @@ design * @package base_default * @copyright Copyright (c) 2010 Magento Inc. (htt
 	if (Mage.Cookies.get('Visited') == "Yes")
 	{
 		<?php if(!Mage::getSingleton('customer/session')->isLoggedIn()) { ?>
-            setTimeout(showLogin,000);
+            if (Mage.Cookies.get('Closed') != "Yes")
+				setTimeout(showLogin,10000);
         <?php } ?>
 	}else
 	{
 		Mage.Cookies.set('Visited', 'Yes');
 		<?php if(!Mage::getSingleton('customer/session')->isLoggedIn()) { ?>
-			<?php if(!$closed) ?>
-            	setTimeout(showJoin,000);
+			if (Mage.Cookies.get('Closed') != "Yes")
+            	setTimeout(showJoin,10000);
         <?php } ?>
 	}
 	
@@ -153,8 +154,13 @@ function removeclose(parameter){
 		jQuery("#closebutton1").hide();
 }
 
-function donotshowwrapper(){
-	$closed=true;
+function removewrapper(parameter){
+	Mage.Cookies.set('Closed', 'Yes');
+	if (parameter)
+		jQuery('#rooja_login_wrapper').hide();
+	else
+		jQuery('#rooja_signup_wrapper').hide();
+	
 }
  
  /*Ajax Login Function */
@@ -323,14 +329,14 @@ function registerAjax() {
 </script>
 
 <div id="rooja_login_wrapper" style="display: none;">
-    <div id="rooja_login_block" onmouseover = "displayclose(true);" onmouseout = "removeclose(true);">men
+    <div id="rooja_login_block" onmouseover = "displayclose(true);" onmouseout = "removeclose(true);">
         <div id="step1" class="rooja_login_bg">
 <!-- <a style = "font-family: Times New Roman ; position: absolute; right:5px ; top :15px; color : black; font-size: 25px" href="#" onclick = "clearError();jQuery('#rooja_login_wrapper').hide();">X</a> -->
-<a style = "position: absolute; right:0px ; top :6px" href="#" onclick = "clearError();jQuery('#rooja_login_wrapper').hide();donotshowwrapper();"><img id = "closebutton" style = "display:none" src="<?php echo $this->getSkinUrl('images/icons/close.png');?>" alt="CLOSE" width = "20" height = "20"></a>
+<a style = "position: absolute; right:0px ; top :0px" href="#" onclick = "clearError();removewrapper(true);"><img id = "closebutton" style = "display:none" src="<?php echo $this->getSkinUrl('images/icons/close.png');?>" alt="CLOSE" width = "20" height = "20"></a>
             <div class="rooja_login_left_logo">
             </div>
             <div class="rooja_login_left_text">
-                DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
             <!--rooja_login_left_text-->
             <div class="rooja_login_right_memberlogin">
                 WELCOME TO ROOJA!</div>
@@ -366,7 +372,7 @@ function registerAjax() {
                 <div class="rooja_login_left_logo">
                 </div>
                 <div class="rooja_login_left_text">
-                    DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                    UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
                 <!--rooja_login_left_text-->
                 <div class="rooja_login_thanks">
                     HELLO!</div>
@@ -382,7 +388,7 @@ function registerAjax() {
                 <div class="rooja_login_left_logo">
                 </div>
                 <div class="rooja_login_left_text">
-                    DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                    UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
                 <!--rooja_login_left_text-->
                 <div class="rooja_forget_pass">
                     RETRIEVE YOUR PASSWORD HERE</div>
@@ -414,13 +420,13 @@ function registerAjax() {
 <div id="rooja_signup_wrapper" style="display: none;">
     <div id="rooja_signup_block" onmouseover = "displayclose(false);" onmouseout = "removeclose(false);">
 <!-- <a style = "font-family: Times New Roman ; position: absolute; right:5px ; top :10px; color : black; font-size: 25px" href="#" onclick = "clearError();jQuery('#rooja_signup_wrapper').hide();">X</a> -->
-<a style = "position: absolute; right:0px ; top :0px" href="#" onclick = "clearError();jQuery('#rooja_signup_wrapper').hide();donotshowwrapper();"><img id = "closebutton1" style = "display:none" src="<?php echo $this->getSkinUrl('images/icons/close.png');?>" alt="CLOSE" width = "20" height = "20"></a>
+<a style = "position: absolute; right:0px ; top :0px" href="#" onclick = "clearError();removewrapper(false);"><img id = "closebutton1" style = "display:none" src="<?php echo $this->getSkinUrl('images/icons/close.png');?>" alt="CLOSE" width = "20" height = "20"></a>
         <form id="regis-form" name="regis-form" onsubmit="return registerAjax();">
             <div id="joinStep1" class="rooja_login_bg">
                 <div class="rooja_login_left_logo">
                 </div>
                 <div class="rooja_login_left_text">
-                    DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                    UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
                 <!--rooja_login_left_text-->
                 <div class="rooja_signup_right_memberlogin">
                     JOIN NOW</div>
@@ -448,7 +454,7 @@ function registerAjax() {
                 <div class="rooja_login_left_logo">
                 </div>
                 <div class="rooja_login_left_text">
-                    DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                    UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
                 <!--rooja_login_left_text-->
                 <div class="rooja_signup_right_memberlogin">
                     Just a few more details</div>
@@ -485,7 +491,7 @@ function registerAjax() {
                 <div class="rooja_login_left_logo">
                 </div>
                 <div class="rooja_login_left_text">
-                    DISCOVER UNIQUE FASHION & PERSONAL PRODUCTS</div>
+                    UNDISCOVERED FASHION & LIFESTYLE FROM ALL ACROSS THE GLOBE</div>
                 <!--rooja_login_left_text-->
                 <div class="rooja_login_thanks">
                     THANKS FOR JOINING!</div>
