--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -202,14 +202,10 @@ $expired = 1;
 
 	</section>
 
-	
-
-
 
     <?php echo $this->getProductListHtml() ?>
 
-	<a href="#" class="backToTop fr">Back to Top</a>
-
+	<a href="#" class="backToTop fr"><img id="back to top" src="<?php echo $this->getSkinUrl();?>images/backtotop.gif" width=40px/></a>
 	<br class="clear">
 
 	</div>
